--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "code",
+  "name": "livescore-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^10.12.4",
-    "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-multi-carousel": "^2.8.4",
-    "react-responsive-carousel": "^3.2.23",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -43,6 +38,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.1"
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3"
   }
 }
